--- a/WebUIServer/static/style.css
+++ b/WebUIServer/static/style.css
@@ -1,5 +1,8 @@
 /* Reset some default browser styles */
-body, h1, h2, form {
+body,
+h1,
+h2,
+form {
   margin: 0;
   padding: 0;
 }
@@ -30,7 +33,8 @@ label {
   margin-bottom: 5px;
 }
 
-input[type="text"], select {
+input[type="text"],
+select {
   width: 200px;
   padding: 10px;
   margin-bottom: 10px;
@@ -47,24 +51,26 @@ input[type="submit"] {
   cursor: pointer;
 }
 
-.layout-table{
+.layout-table {
   border: none;
   width: fit-content;
 }
 
-.layout-table tr,td {
+.layout-table tr,
+td {
   border: none;
 }
 
 #db-table {
-  box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
-  -moz-box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
-  -webkit-box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
   border-collapse: collapse;
   line-height: 1.5;
   text-align: left;
   width: 100%;
 }
+
 #db-table th {
   background-color: #1B73BA;
   box-sizing: border-box;
@@ -73,13 +79,13 @@ input[type="submit"] {
   font-weight: normal;
   padding: 10px;
   text-align: center;
-  vertical-align : middle;
+  vertical-align: middle;
 }
 
 #db-table thead {
-  box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
-  -moz-box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
-  -webkit-box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 /* th偶数番号の設定 */
@@ -87,6 +93,7 @@ input[type="submit"] {
   background-color: #17619C;
   border-right: 1px solid #17619C;
 }
+
 #db-table td {
   background-color: #F8F8F8;
   border-right: 1px solid #8DA6AF;
@@ -95,9 +102,11 @@ input[type="submit"] {
   padding: 10px;
   vertical-align: top;
 }
+
 #db-table td:last-child {
   border-right: none;
 }
+
 #db-table tbody tr:first-child td {
   border-top: none;
 }
@@ -106,55 +115,61 @@ input[type="submit"] {
 #db-table tr:nth-child(even) th {
   background-color: #17619C;
   border-bottom: 1px solid #17619C;
-  box-shadow: 2px 0 2px rgba(0,0,0,0.2);
-  -moz-box-shadow: 2px 0 2px rgba(0,0,0,0.2);
-  -webkit-box-shadow: 2px 0 2px rgba(0,0,0,0.2);
+  box-shadow: 2px 0 2px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 2px 0 2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 2px 0 2px rgba(0, 0, 0, 0.2);
 }
 
 /* サイドバーのスタイル */
 #sidebar {
-    width: 250px;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
+  width: 250px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
 }
 
 /* コンテンツ領域のスタイル */
 #content {
-    margin-left: 300px; /* サイドバーの幅+20pxの余白 */
-    padding: 20px;
+  margin-left: 220px;
+  /* サイドバーの幅+20pxの余白 */
+  padding: 20px;
 }
 
 /* iframeのスタイル */
 iframe {
-    width: 100%;
-    height: fit-content; /* iframeの高さを調整してください */
-    border: none;
+  width: 100%;
+  height: fit-content;
+  /* iframeの高さを調整してください */
+  border: none;
 }
 
 /* リンクのスタイル */
 a {
   text-decoration: none;
-  color: #007BFF; /* リンクのデフォルトの色を設定 */
-  transition: color 0.3s; /* リンクの色が変わる際のアニメーション */
+  color: #007BFF;
+  /* リンクのデフォルトの色を設定 */
+  transition: color 0.3s;
+  /* リンクの色が変わる際のアニメーション */
 }
 
 a:hover {
-  color: #0056b3; /* リンクにカーソルを合わせた際の色を設定 */
+  color: #0056b3;
+  /* リンクにカーソルを合わせた際の色を設定 */
 }
 
 /* sidebar.css */
 #sidebar {
-  width: 280px;
+  width: 200px;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #1B73BA; /* ナビゲーションバーの背景色 */
+  background-color: #1B73BA;
+  /* ナビゲーションバーの背景色 */
   color: #fff;
   padding: 20px;
 }
@@ -190,16 +205,17 @@ a:hover {
 }
 
 .sidebar-menu a:hover {
-  color: #f0f0f0; /* ホバー時の色 */
+  color: #f0f0f0;
+  /* ホバー時の色 */
 }
 
-textarea{
+textarea {
   width: 700px;
   height: 300px;
-  font-size:larger;
+  font-size: larger;
 }
 
-.section{
+.section {
   margin-bottom: 30px;
   border-radius: 10px;
   border-width: 2px;
@@ -209,7 +225,21 @@ textarea{
   padding-right: 20px;
 }
 
-.section h3{
+.section h3 {
   text-align: center;
   font-family: "Dancing Script";
+}
+
+.content-left,
+.content-right {
+  width: 50%;
+  height: 100%;
+}
+
+.content-left {
+  float: left;
+}
+
+.content-right {
+  float: right;
 }
