--- a/WebUIServer/templates/employee_registration.html
+++ b/WebUIServer/templates/employee_registration.html
@@ -1,26 +1,102 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Mamagoto.inc</title>
     <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet">
 </head>
+
 <body>
     <div id="sidebar">
-    {% include 'sidebar.html' %}
+        {% include 'sidebar.html' %}
     </div>
     <div id="content">
-        {{ md }}
-        <form method="POST" action="/register-page-register">
-            <label for='departments'>Departments:</label><br>
-            <select multiple id='departments' name='departments'>
-                {% for department in departments %}
+        <div class="content-left">
+            {{ md }}
+            <form method="POST" action="/employee-page/register">
+                <label for='departments'>Departments:</label><br>
+                <select multiple id='departments' name='departments'>
+                    {% for department in departments %}
                     <option value="{{ department.name }}">{{ department.name }}</option>
+                    {% endfor %}
+                </select><br>
+                <label for='requirements'>Requirements:</label><br>
+                <input type='text' id='requirements' name='requirements'><br>
+                <input type='submit' value='Register'>
+            </form>
+        </div>
+        <div class="content-right">
+            <h1>従業員-部門リスト</h1>
+
+            <form method="POST" action="/employee-page/structure-save-query">
+                <table class="layout-table">
+                    <tr>
+                        <td colspan="2">
+                            <h2>クエリを保存</h2>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="query_name">クエリ名:</label>
+                            <input type="text" name="query_name" id="query_name" required>
+                        </td>
+                        <td>
+                            <label for="sql">SQL文:</label>
+                            <input type="text" name="sql" id="sql" required size="150" placeholder="SQL文を入力してください">
+                            <input type="submit" value="保存">
+                        </td>
+                    </tr>
+                </table>
+            </form>
+
+            <table class="layout-table">
+                <tr>
+                    <td>
+                        <h2>クエリを実行</h2>
+                        <form method="POST" action="/employee-page/structure-execute-saved-query">
+                            <label for="selected_query_name">クエリを選択:</label>
+                            <select name="selected_query_name">
+                                {% for query_name in query_names %}
+                                <option>{{ query_name }}</option>
+                                {% endfor %}
+                            </select>
+                            <input type="submit" value="実行">
+                        </form>
+                    </td>
+                    <td>
+                        <h2>クエリを削除</h2>
+                        <form method="POST" action="/employee-page/structure-delete-query">
+                            <label for="selected_query_name">削除するクエリを選択:</label>
+                            <select name="selected_query_name">
+                                {% for query_name in query_names %}
+                                <option>{{ query_name }}</option>
+                                {% endfor %}
+                            </select>
+                            <input type="submit" value="削除">
+                        </form>
+                    </td>
+                </tr>
+            </table>
+
+            {% if employees %}
+            <table id="db-table">
+                <tr>
+                    {% for column in column_names %}
+                    <th>{{ column }}</th>
+                    {% endfor %}
+                </tr>
+                {% for row in employees %}
+                <tr>
+                    {% for value in row %}
+                    <td>{{ value }}</td>
+                    {% endfor %}
+                </tr>
                 {% endfor %}
-            </select><br>    
-            <label for='requirements'>Requirements:</label><br>
-            <input type='text' id='requirements' name='requirements'><br>
-            <input type='submit' value='Register'>
-        </form>
+            </table>
+            {% endif %}
+
+        </div>
     </div>
 </body>
+
 </html>
