--- a/WebUIServer/templates/mails.html
+++ b/WebUIServer/templates/mails.html
@@ -11,74 +11,90 @@
         {% include 'sidebar.html' %}
     </div>
     <div id="content">
-        <h1>メールサーバ</h1>
+        <div class="content-left">
+            {{ md }}
+            <form method="POST">
+                <label for="address">宛先:</label>
+                <select multiple id='address' name='address'>
+                    {% for address in addresses %}
+                    <option value="{{ address }}">{{ address }}</option>
+                    {% endfor %}
+                </select>
+                <label for="content">内容:</label><br />
+                <textarea name="content" required></textarea>
+                <input type="submit" value="送信">
+            </form>
+        </div>
+        <div class="content-right">
+            <h1>メールサーバ</h1>
 
-        <form method="POST" action="/mails-save-query">
+            <form method="POST" action="/mails-save-query">
+                <table class="layout-table">
+                    <tr>
+                        <td colspan="2">
+                            <h2>クエリを保存</h2>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="query_name">クエリ名:</label>
+                            <input type="text" name="query_name" id="query_name" required>
+                        </td>
+                        <td>
+                            <label for="sql">SQL文:</label>
+                            <input type="text" name="sql" id="sql" required size="150" placeholder="SQL文を入力してください">
+                            <input type="submit" value="保存">
+                        </td>
+                    </tr>
+                </table>
+            </form>
+
             <table class="layout-table">
                 <tr>
-                    <td colspan="2">
-                        <h2>クエリを保存</h2>
-                    </td>
-                </tr>
-                <tr>
                     <td>
-                        <label for="query_name">クエリ名:</label>
-                        <input type="text" name="query_name" id="query_name" required>
+                        <h2>クエリを実行</h2>
+                        <form method="POST" action="/mails-execute-saved-query">
+                            <label for="selected_query_name">クエリを選択:</label>
+                            <select name="selected_query_name">
+                                {% for query_name in query_names %}
+                                <option>{{ query_name }}</option>
+                                {% endfor %}
+                            </select>
+                            <input type="submit" value="実行">
+                        </form>
                     </td>
                     <td>
-                        <label for="sql">SQL文:</label>
-                        <input type="text" name="sql" id="sql" required size="150" placeholder="SQL文を入力してください">
-                        <input type="submit" value="保存">
+                        <h2>クエリを削除</h2>
+                        <form method="POST" action="/mails-delete-query">
+                            <label for="selected_query_name">削除するクエリを選択:</label>
+                            <select name="selected_query_name">
+                                {% for query_name in query_names %}
+                                <option>{{ query_name }}</option>
+                                {% endfor %}
+                            </select>
+                            <input type="submit" value="削除">
+                        </form>
                     </td>
                 </tr>
             </table>
-        </form>
 
-        <table class="layout-table">
-            <tr>
-                <td>
-                    <h2>クエリを実行</h2>
-                    <form method="POST" action="/mails-execute-saved-query">
-                        <label for="selected_query_name">クエリを選択:</label>
-                        <select name="selected_query_name">
-                            {% for query_name in query_names %}
-                            <option>{{ query_name }}</option>
-                            {% endfor %}
-                        </select>
-                        <input type="submit" value="実行">
-                    </form>
-                </td>
-                <td>
-                    <h2>クエリを削除</h2>
-                    <form method="POST" action="/mails-delete-query">
-                        <label for="selected_query_name">削除するクエリを選択:</label>
-                        <select name="selected_query_name">
-                            {% for query_name in query_names %}
-                            <option>{{ query_name }}</option>
-                            {% endfor %}
-                        </select>
-                        <input type="submit" value="削除">
-                    </form>
-                </td>
-            </tr>
-        </table>
-
-        {% if mails %}
-        <table id="db-table">
-            <tr>
-                {% for column in column_names %}
-                <th>{{ column }}</th>
+            {% if mails %}
+            <table id="db-table">
+                <tr>
+                    {% for column in column_names %}
+                    <th>{{ column }}</th>
+                    {% endfor %}
+                </tr>
+                {% for row in mails %}
+                <tr>
+                    {% for value in row %}
+                    <td>{{ value }}</td>
+                    {% endfor %}
+                </tr>
                 {% endfor %}
-            </tr>
-            {% for row in mails %}
-            <tr>
-                {% for value in row %}
-                <td>{{ value }}</td>
-                {% endfor %}
-            </tr>
-            {% endfor %}
-        </table>
-        {% endif %}
+            </table>
+            {% endif %}
+        </div>
     </div>
 </body>
 
